# project-alive

./: .gitattributes  .gitignore  .gitmodules  Buffer.cpp  Buffer.h  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Camera.cpp  Cell.cpp  Cell.h  FrameBuffer.cpp  LeafCell.cpp  Main.cpp  MoverCell.cpp  MoverCell.h  Organism.cpp  Organism.h  OrthoCamController.h  README.md  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  SubTexture2D.cpp  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  ThornCell.cpp  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  bcpch.h  config.bat  imgui.ini
Shaders/: flat_color.glsl  texture.frag  texture.glsl  water.glsl
imgui/: imgui.ini
src/: ArmorCell.cpp  ArmorCell.h  CarnivoreCell.cpp  CarnivoreCell.h  Cell.cpp  Cell.h  Cell.ixx  ContactListener.cpp  ContactListener.h  CorpseCell.cpp  CorpseCell.h  DNA.cpp  DNA.h  FoodCell.cpp  FoodCell.h  FruitCell.cpp  FruitCell.h  HerbivoreCell.cpp  HerbivoreCell.h  LeafCell.cpp  LeafCell.h  LightCell.cpp  LightCell.h  Main.cpp  Main.h  MouthCell.cpp  MouthCell.h  MoverCell.cpp  MoverCell.h  Mutation.cpp  Mutation.h  Organism.cpp  Organism.h  Organism.ixx  OrganismManager.cpp  OrganismManager.h  ThornCell.cpp  ThornCell.h  pch.h
src/Engine/: App.cpp  App.h  App.ixx  Buffer.cpp  Buffer.h  Buffer.ixx  Camera.cpp  Camera.h  Camera.ixx  ClockTimer.cpp  ClockTimer.h  Component.cpp  Component.h  ECS.ixx  Entity.h  EntityGrid.cpp  EntityGrid.h  FrameBuffer.cpp  FrameBuffer.h  FrameBuffer.ixx  IComponent.h  ITimerBase.h  ImGuiHandler.cpp  ImGuiHandler.h  ImGuiMarkdown.h  OrthoCamController.cpp  OrthoCamController.h  Physics.cpp  Physics.h  Physics.ixx  QuickMaths.cpp  QuickMaths.h  QuickMaths.ixx  Renderer.ixx  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Shader.ixx  SoundManager.cpp  (+20 more)
src/Engine/Physics/: AABBCollider.cpp  AABBCollider.h  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  PhysicsManager.cpp  PhysicsManager.h  RigidBody.cpp  RigidBody.h
